--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "StalkerMode",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "manifest_version": 2,
   "description": "Disables/Hides fb buttons (like, comment, add etc)",
   "background": {
@@ -10,7 +10,7 @@
     "persistent": true
   },
   "browser_action": {
-    "default_title": "No Likes!",
+    "default_title": "Click to activate/Refresh page to stop",
 	"default_icon": "no-facebook-like.png"
   },
   "permissions": [
